--- a/cloudformation/create-web-app.json
+++ b/cloudformation/create-web-app.json
@@ -227,7 +227,7 @@
     "WebEIPAddress1" : {
     "Type": "AWS::EC2::EIPAssociation",
     "Properties": {
-      "AllocationId": "eipalloc-0641e66f",
+      "AllocationId": "eipalloc-601bb809",
       "InstanceId": { "Ref" : "WebHost1" }
     }
    },
@@ -235,7 +235,7 @@
     "ProvEIPAddress1" : {
     "Type": "AWS::EC2::EIPAssociation",
     "Properties": {
-      "AllocationId": "eipalloc-d943e4b0",
+      "AllocationId": "eipalloc-1a1bb873",
       "InstanceId": { "Ref" : "ProvisioningHost1" }
     }
    },
@@ -302,26 +302,10 @@
         "mkdir -p /etc/ansible/playbooks\n",
         "sudo -u centos bash -c : && RUNAS='sudo -u centos'\n",
         "$RUNAS bash<<CENT\n",
-        "export AWS_ACCESS_KEY_ID=AKIAJTRTXYOQKL5FZMLQ\n",
-        "export AWS_SECRET_ACCESS_KEY=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\n",
-        "export AWS_DEFAULT_REGION=eu-central-1\n",
-        "aws s3 cp s3://planixs-ansible-configs2/prov-files.zip /tmp\n",
-        "aws s3 cp s3://planixs-ansible-configs2/base-files.zip /tmp\n",
-        "aws s3 cp s3://client-ipsec2/plx/plx.zip /tmp\n",
         "CENT\n",
-	"unzip /tmp/prov-files.zip\n",
-	"unzip /tmp/plx.zip\n",
-        "mv /tmp/ansible.rsa /home/centos/.ssh/id_rsa &> /tmp/m1.log\n",
-        "mv /tmp/ansible.pub /home/centos/.ssh/id_rsa.pub &> /tmp/m2.log\n",
-        "mv /tmp/ansible.hosts /etc/ansible/hosts &> /tmp/m3.log\n",
-        "mv /tmp/ansible.cfg /etc/ansible/ansible.cfg &> /tmp/m4.log\n",
-        "mv /tmp/reverseproxy.yml /etc/ansible/playbooks/reverseproxy.yml &> /tmp/m5.log\n",
-        "mv /tmp/api.yml /etc/ansible/playbooks/api.yml &> /tmp/m6.log\n",
-        "mv /tmp/ci.yml /etc/ansible/playbooks/ci.yml &> /tmp/m7.log\n",
-	"mv /tmp/reverseproxy-vpn.yml /etc/ansible/playbooks/reverseproxy-vpn.yml &> /tmp/m8.log\n",
-	"mv /tmp/vpn-mgmt.yml /etc/ansible/playbooks/vpn-mgmt.yml &> /tmp/m9.log\n",
-	"mv /tmp/vpn-conf.yml /etc/ansible/playbooks/vpn-conf.yml &> /tmp/m10.log\n",
-        "mv /tmp/ssh_config /etc/ssh/ssh_config &> /tmp/m11.log\n"
+	"#mv /tmp/vpn-mgmt.yml /etc/ansible/playbooks/vpn-mgmt.yml &> /tmp/m9.log\n",
+	"#mv /tmp/vpn-conf.yml /etc/ansible/playbooks/vpn-conf.yml &> /tmp/m10.log\n",
+        "#mv /tmp/ssh_config /etc/ssh/ssh_config &> /tmp/m11.log\n"
     ]]}},
 
         "BlockDeviceMappings": [{
@@ -362,10 +346,6 @@
         "#!/bin/bash -xe\n",
         "sudo -u centos bash -c : && RUNAS='sudo -u centos'\n",
         "$RUNAS bash<<CENT\n",
-        "export AWS_ACCESS_KEY_ID=AKIAJTRTXYOQKL5FZMLQ\n",
-        "export AWS_SECRET_ACCESS_KEY=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\n",
-        "export AWS_DEFAULT_REGION=eu-central-1\n",
-        "aws s3 cp s3://planixs-ansible-configs2/base-files.zip /tmp\n",
         "CENT\n",
         "sudo -u root bash -c : && RUNAS='sudo -u root'\n",
         "$RUNAS bash<<ROOT\n",
@@ -373,9 +353,9 @@
 	"unzip base-files.zip &> 0.log\n",
         "##cat ansible.pub.root >> /root/.ssh/authorized_keys &> 2.log\n",
         "##cat ansible.pub >> /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "cp authorized_keys.root /root/.ssh/authorized_keys &> 2.log\n",
-        "cp authorized_keys.base /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "chown -R centos:centos /home/centos/.ssh/authorized_keys &> 4.log\n",
+        "#cp authorized_keys.root /root/.ssh/authorized_keys &> 2.log\n",
+        "#cp authorized_keys.base /home/centos/.ssh/authorized_keys &> 3.log\n",
+        "#chown -R centos:centos /home/centos/.ssh/authorized_keys &> 4.log\n",
 	"#####sed -i /etc/selinux/config -r -e 's/^SELINUX=.*/SELINUX=disabled/g'\n",
 	"ROOT\n"
     ]]}},
@@ -420,20 +400,16 @@
         "#!/bin/bash -xe\n",
         "sudo -u centos bash -c : && RUNAS='sudo -u centos'\n",
         "$RUNAS bash<<CENT\n",
-        "export AWS_ACCESS_KEY_ID=AKIAJTRTXYOQKL5FZMLQ\n",
-        "export AWS_SECRET_ACCESS_KEY=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\n",
-        "export AWS_DEFAULT_REGION=eu-central-1\n",
-        "aws s3 cp s3://planixs-ansible-configs2/base-files.zip /tmp\n",
         "CENT\n",
         "sudo -u root bash -c : && RUNAS='sudo -u root'\n",
         "$RUNAS bash<<ROOT\n",
 	"cd /tmp\n",
-	"unzip base-files.zip &> 0.log\n",
+	"#unzip base-files.zip &> 0.log\n",
         "##cat ansible.pub.root >> /root/.ssh/authorized_keys &> 2.log\n",
         "##cat ansible.pub >> /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "cp authorized_keys.root /root/.ssh/authorized_keys &> 2.log\n",
-        "cp authorized_keys.base /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "chown -R centos:centos /home/centos/.ssh/authorized_keys &> 4.log\n",
+        "#cp authorized_keys.root /root/.ssh/authorized_keys &> 2.log\n",
+        "#cp authorized_keys.base /home/centos/.ssh/authorized_keys &> 3.log\n",
+        "#chown -R centos:centos /home/centos/.ssh/authorized_keys &> 4.log\n",
 	"#####sed -i /etc/selinux/config -r -e 's/^SELINUX=.*/SELINUX=disabled/g'\n",
 	"ROOT\n"
     ]]}},
@@ -478,20 +454,16 @@
         "#!/bin/bash -xe\n",
         "sudo -u centos bash -c : && RUNAS='sudo -u centos'\n",
         "$RUNAS bash<<CENT\n",
-        "export AWS_ACCESS_KEY_ID=AKIAJTRTXYOQKL5FZMLQ\n",
-        "export AWS_SECRET_ACCESS_KEY=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\n",
-        "export AWS_DEFAULT_REGION=eu-central-1\n",
-        "aws s3 cp s3://planixs-ansible-configs2/base-files.zip /tmp\n",
         "CENT\n",
         "sudo -u root bash -c : && RUNAS='sudo -u root'\n",
         "$RUNAS bash<<ROOT\n",
 	"cd /tmp\n",
-	"unzip base-files.zip &> 0.log\n",
+	"#unzip base-files.zip &> 0.log\n",
         "##cat ansible.pub.root >> /root/.ssh/authorized_keys &> 2.log\n",
         "##cat ansible.pub >> /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "cp authorized_keys.root /root/.ssh/authorized_keys &> 2.log\n",
-        "cp authorized_keys.base /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "chown -R centos:centos /home/centos/.ssh/authorized_keys &> 4.log\n",
+        "#cp authorized_keys.root /root/.ssh/authorized_keys &> 2.log\n",
+        "#cp authorized_keys.base /home/centos/.ssh/authorized_keys &> 3.log\n",
+        "#chown -R centos:centos /home/centos/.ssh/authorized_keys &> 4.log\n",
 	"#####sed -i /etc/selinux/config -r -e 's/^SELINUX=.*/SELINUX=disabled/g'\n",
 	"ROOT\n"
     ]]}},
