--- a/cloudformation/create-web-app.json
+++ b/cloudformation/create-web-app.json
@@ -3,7 +3,7 @@
   "Description" : "Test Environment.",
   "Parameters" : {
     "KeyName" : {
-      "Default" : "vpn-access-central",
+      "Default" : "test",
       "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the bastion host",
       "Type" : "String",
       "MinLength": "1",
@@ -14,7 +14,7 @@
     "WebInstanceType" : {
       "Description" : "Web instance type",
       "Type" : "String",
-      "Default" : "m4.large",
+      "Default" : "t2.micro",
       "AllowedValues" : [
         "t2.micro","m4.large","m3.xlarge","c4.2xlarge","c3.4xlarge",
         "c3.8xlarge","r3.large","r3.xlarge","r3.2xlarge","r3.4xlarge","r3.8xlarge"
@@ -25,7 +25,7 @@
     "AppInstanceType" : {
       "Description" : "App instance type",
       "Type" : "String",
-      "Default" : "m4.large",
+      "Default" : "t2.micro",
       "AllowedValues" : [
         "t2.micro","m4.large","m3.xlarge","c4.2xlarge","c3.4xlarge",
         "c3.8xlarge","r3.large","r3.xlarge","r3.2xlarge","r3.4xlarge","r3.8xlarge"
@@ -36,7 +36,7 @@
     "ProvisioningInstanceType" : {
       "Description" : "Provisioning instance type",
       "Type" : "String",
-      "Default" : "m4.large",
+      "Default" : "t2.micro",
       "AllowedValues" : [
         "t2.micro","m4.large","m3.xlarge","c4.2xlarge","c3.4xlarge",
         "c3.8xlarge","r3.large","r3.xlarge","r3.2xlarge","r3.4xlarge","r3.8xlarge"
@@ -88,15 +88,15 @@
       "c3.8xlarge"  : { "EbsOptimized" : "false" }
     },
     "AWSWEBAMI1" : {
-       "eu-central-1"    : { "AMI" : "ami-9bde31f4" }
+       "eu-central-1"    : { "AMI" : "ami-591af536" }
     },
 
     "AWSAPPAMI1" : {
-       "eu-central-1"    : { "AMI" : "ami-9bde31f4" }
+       "eu-central-1"    : { "AMI" : "ami-591af536" }
     },
 
     "AWSPROVISIONINGAMI1" : {
-       "eu-central-1"    : { "AMI" : "ami-5edb3431" }
+       "eu-central-1"    : { "AMI" : "ami-2a17f845" }
     }
   },
 
@@ -229,7 +229,7 @@
     "WebEIPAddress1" : {
     "Type": "AWS::EC2::EIPAssociation",
     "Properties": {
-      "AllocationId": "eipalloc-601bb809",
+      "AllocationId": "eipalloc-61a10c08",
       "InstanceId": { "Ref" : "WebHost1" }
     }
    },
@@ -237,7 +237,7 @@
     "AppEIPAddress1" : {
     "Type": "AWS::EC2::EIPAssociation",
     "Properties": {
-      "AllocationId": "eipalloc-aaa503c3",
+      "AllocationId": "eipalloc-cea70aa7",
       "InstanceId": { "Ref" : "AppHost1" }
     }
    },
@@ -245,7 +245,7 @@
     "AppEIPAddress2" : {
     "Type": "AWS::EC2::EIPAssociation",
     "Properties": {
-      "AllocationId": "eipalloc-979736fe",
+      "AllocationId": "eipalloc-7aa00d13",
       "InstanceId": { "Ref" : "AppHost2" }
     }
    },
@@ -253,11 +253,10 @@
     "ProvEIPAddress1" : {
     "Type": "AWS::EC2::EIPAssociation",
     "Properties": {
-      "AllocationId": "eipalloc-1a1bb873",
+      "AllocationId": "eipalloc-26a60b4f",
       "InstanceId": { "Ref" : "ProvisioningHost1" }
     }
    },
-
 
     "NATSecurityGroup" : {
       "Type" : "AWS::EC2::SecurityGroup",
@@ -320,18 +319,6 @@
         "EbsOptimized": { "Fn::If" : [ "IsEBSOptimized", true, false ] },
 	"SourceDestCheck" : false,
 
-      "UserData"  : { "Fn::Base64" : { "Fn::Join" : ["", [
-        "#!/bin/bash -xe\n",
-        "cd /tmp\n",
-        "mkdir -p /etc/ansible/playbooks\n",
-        "sudo -u centos bash -c : && RUNAS='sudo -u centos'\n",
-        "$RUNAS bash<<CENT\n",
-        "CENT\n",
-	"#mv /tmp/vpn-mgmt.yml /etc/ansible/playbooks/vpn-mgmt.yml &> /tmp/m9.log\n",
-	"#mv /tmp/vpn-conf.yml /etc/ansible/playbooks/vpn-conf.yml &> /tmp/m10.log\n",
-        "#mv /tmp/ssh_config /etc/ssh/ssh_config &> /tmp/m11.log\n"
-    ]]}},
-
         "BlockDeviceMappings": [{
           "DeviceName" : "/dev/xvdf",
           "Ebs": {
@@ -365,24 +352,6 @@
         "EbsOptimized": { "Fn::If" : [ "IsEBSOptimized", true, false ] },
 	"SourceDestCheck" : false,
 
-      "UserData"  : { "Fn::Base64" : { "Fn::Join" : ["", [
-        "#!/bin/bash -xe\n",
-        "sudo -u centos bash -c : && RUNAS='sudo -u centos'\n",
-        "$RUNAS bash<<CENT\n",
-        "CENT\n",
-        "sudo -u root bash -c : && RUNAS='sudo -u root'\n",
-        "$RUNAS bash<<ROOT\n",
-	"cd /tmp\n",
-	"unzip base-files.zip &> 0.log\n",
-        "##cat ansible.pub.root >> /root/.ssh/authorized_keys &> 2.log\n",
-        "##cat ansible.pub >> /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "#cp authorized_keys.root /root/.ssh/authorized_keys &> 2.log\n",
-        "#cp authorized_keys.base /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "#chown -R centos:centos /home/centos/.ssh/authorized_keys &> 4.log\n",
-	"#####sed -i /etc/selinux/config -r -e 's/^SELINUX=.*/SELINUX=disabled/g'\n",
-	"ROOT\n"
-    ]]}},
-
         "BlockDeviceMappings": [{
           "DeviceName" : "/dev/xvdf",
           "Ebs": {
@@ -403,9 +372,6 @@
       }
     },
 
-
-
-
     "AppHost1" : {
       "Type" : "AWS::EC2::Instance",
       "Properties" : {
@@ -417,25 +383,6 @@
         "InstanceType" : { "Ref" : "AppInstanceType" },
         "EbsOptimized": { "Fn::If" : [ "IsEBSOptimized", true, false ] },
 	"SourceDestCheck" : false,
-
-      "UserData"  : { "Fn::Base64" : { "Fn::Join" : ["", [
-
-        "#!/bin/bash -xe\n",
-        "sudo -u test-user bash -c : && RUNAS='sudo -u test-user'\n",
-        "$RUNAS bash<<CENT\n",
-        "CENT\n",
-        "sudo -u root bash -c : && RUNAS='sudo -u root'\n",
-        "$RUNAS bash<<ROOT\n",
-	"cd /tmp\n",
-	"#unzip base-files.zip &> 0.log\n",
-        "##cat ansible.pub.root >> /root/.ssh/authorized_keys &> 2.log\n",
-        "##cat ansible.pub >> /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "#cp authorized_keys.root /root/.ssh/authorized_keys &> 2.log\n",
-        "#cp authorized_keys.base /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "#chown -R centos:centos /home/centos/.ssh/authorized_keys &> 4.log\n",
-	"#####sed -i /etc/selinux/config -r -e 's/^SELINUX=.*/SELINUX=disabled/g'\n",
-	"ROOT\n"
-    ]]}},
 
         "BlockDeviceMappings": [{
           "DeviceName" : "/dev/xvdf",
@@ -457,9 +404,6 @@
       }
     },
 
-
-
-
     "AppHost2" : {
       "Type" : "AWS::EC2::Instance",
       "Properties" : {
@@ -471,25 +415,6 @@
         "InstanceType" : { "Ref" : "AppInstanceType" },
         "EbsOptimized": { "Fn::If" : [ "IsEBSOptimized", true, false ] },
 	"SourceDestCheck" : false,
-
-      "UserData"  : { "Fn::Base64" : { "Fn::Join" : ["", [
-
-        "#!/bin/bash -xe\n",
-        "sudo -u test-user bash -c : && RUNAS='sudo -u test-user'\n",
-        "$RUNAS bash<<CENT\n",
-        "CENT\n",
-        "sudo -u root bash -c : && RUNAS='sudo -u root'\n",
-        "$RUNAS bash<<ROOT\n",
-	"cd /tmp\n",
-	"#unzip base-files.zip &> 0.log\n",
-        "##cat ansible.pub.root >> /root/.ssh/authorized_keys &> 2.log\n",
-        "##cat ansible.pub >> /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "#cp authorized_keys.root /root/.ssh/authorized_keys &> 2.log\n",
-        "#cp authorized_keys.base /home/centos/.ssh/authorized_keys &> 3.log\n",
-        "#chown -R centos:centos /home/centos/.ssh/authorized_keys &> 4.log\n",
-	"#####sed -i /etc/selinux/config -r -e 's/^SELINUX=.*/SELINUX=disabled/g'\n",
-	"ROOT\n"
-    ]]}},
 
         "BlockDeviceMappings": [{
           "DeviceName" : "/dev/xvdf",
@@ -510,9 +435,6 @@
         "Tags" : [ {"Key" : "Name", "Value" : "App Host2 (Ansible)"}, {"Key" : "App", "Value" : "true"} ]
       }
     },
-
-
-
 
 
     "ProvisioningInstanceSecurityGroup" : {
